tests/baselines/reference/parserMethodSignature12(strict=true).errors.txt
parserMethodSignature12.ts(2,3): error TS7010: '3', which lacks return-type annotation, implicitly has an 'any' return type.


==== parserMethodSignature12.ts (1 errors) ====
    interface I {
      3?<T>();
      ~~~~~~~~
!!! error TS7010: '3', which lacks return-type annotation, implicitly has an 'any' return type.
    }